--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ function submitForm() {
     middle_liner_rate: document.getElementById("middle_liner_rate").value
   };
 
-  fetch("http://localhost:5680/webhook-test/quote-rsc", {
+  fetch("https://quoting.app.n8n.cloud/webhook/quote-rsc", {
     method: "POST",
     headers: {
       "Content-Type": "application/json"
@@ -260,6 +260,7 @@ function submitForm() {
 
 </body>
 </html>
+
 
 
 
