--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 <body>
 
 <div class="card">
+<form onsubmit="event.preventDefault(); submitForm();">
 
 <h2>RSC Box Quotation</h2>
 
@@ -115,15 +116,15 @@
 <div class="grid-3">
   <div class="field">
     <label>Length</label>
-    <input type="number" id="length">
+    <input type="number" id="length" name="length" required min="1">
   </div>
   <div class="field">
     <label>Width</label>
-    <input type="number" id="width">
+    <input type="number" id="width" name="width" required min="1">
   </div>
   <div class="field">
     <label>Height</label>
-    <input type="number" id="height">
+    <input type="number" id="height" name="height" required min="1">
   </div>
 </div>
 
@@ -138,7 +139,7 @@
   </div>
   <div class="field">
     <label>Quantity</label>
-    <input type="number" id="quantity">
+    <input type="number" id="quantity" name="quantity" required min="1">
   </div>
   <div class="field">
     <label>Ply</label>
@@ -165,33 +166,33 @@
 <div class="grid-2">
   <div class="field">
     <label>Top Liner GSM</label>
-    <input type="number" id="top_liner_gsm">
+    <input type="number" id="top_liner_gsm" name="top_liner_gsm" required min="1">
   </div>
   <div class="field">
     <label>Top Liner Rate (₹/kg)</label>
-    <input type="number" id="top_liner_rate">
+    <input type="number" id="top_liner_rate" name="top_liner_rate" required min="0.01" step="0.01">
   </div>
 </div>
 
 <div class="grid-2" style="margin-top:12px;">
   <div class="field">
     <label>Medium GSM</label>
-    <input type="number" id="medium_gsm">
+    <input type="number" id="medium_gsm" name="medium_gsm" required min="1">
   </div>
   <div class="field">
     <label>Medium Rate (₹/kg)</label>
-    <input type="number" id="medium_rate">
+    <input type="number" id="medium_rate" name="medium_rate" required min="0.01" step="0.01">
   </div>
 </div>
 
 <div class="grid-2" style="margin-top:12px;">
   <div class="field">
     <label>Bottom Liner GSM</label>
-    <input type="number" id="bottom_liner_gsm">
+    <input type="number" id="bottom_liner_gsm" name="bottom_liner_gsm" required min="1">
   </div>
   <div class="field">
     <label>Bottom Liner Rate (₹/kg)</label>
-    <input type="number" id="bottom_liner_rate">
+    <input type="number" id="bottom_liner_rate" name="bottom_liner_rate" required min="0.01" step="0.01">
   </div>
 </div>
 
@@ -200,18 +201,19 @@
   <div class="grid-2" style="margin-top:12px;">
     <div class="field">
       <label>Middle Liner GSM (5 Ply)</label>
-      <input type="number" id="middle_liner_gsm">
+      <input type="number" id="middle_liner_gsm" name="middle_liner_gsm" min="1">
     </div>
     <div class="field">
       <label>Middle Liner Rate (₹/kg)</label>
-      <input type="number" id="middle_liner_rate">
+      <input type="number" id="middle_liner_rate" name="middle_liner_rate" min="0.01" step="0.01">
     </div>
   </div>
 
-</div>
-
-<button type="button" onclick="submitForm()">Submit</button>
-
+</div> 
+<input type="text" id="company_name" name="company_name" style="display:none">
+<button type="submit" id="submitBtn">Submit Quote</button>
+  
+</form>
 </div>
 
 <script>
@@ -227,14 +229,30 @@ function toggleExtraFields() {
   }
 }
 
-function submitForm() {
+async function submitForm() {
+
+  const submitBtn = document.getElementById("submitBtn");
+  submitBtn.disabled = true;
+  submitBtn.innerText = "Submitting...";
+
+  const ply = document.getElementById("ply").value;
+  const honeypot = document.getElementById("company_name").value;
+
+  // Honeypot spam check
+if (honeypot) {
+  console.log("Spam detected. Submission blocked.");
+  submitBtn.disabled = false;
+  submitBtn.innerText = "Submit Quote";
+  return;
+}
+
   const data = {
     length: document.getElementById("length").value,
     width: document.getElementById("width").value,
     height: document.getElementById("height").value,
     unit: document.getElementById("unit").value,
     quantity: document.getElementById("quantity").value,
-    ply: document.getElementById("ply").value,
+    ply: ply,
     printing: document.getElementById("printing").value,
     top_liner_gsm: document.getElementById("top_liner_gsm").value,
     top_liner_rate: document.getElementById("top_liner_rate").value,
@@ -242,24 +260,43 @@ function submitForm() {
     medium_rate: document.getElementById("medium_rate").value,
     bottom_liner_gsm: document.getElementById("bottom_liner_gsm").value,
     bottom_liner_rate: document.getElementById("bottom_liner_rate").value,
-    middle_liner_gsm: document.getElementById("middle_liner_gsm").value,
-    middle_liner_rate: document.getElementById("middle_liner_rate").value
+    middle_liner_gsm: "",
+    middle_liner_rate: ""
   };
 
-  fetch("https://quoting.app.n8n.cloud/webhook/quote-rsc", {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json"
-    },
-    body: JSON.stringify(data)
-  })
-  .then(response => alert("Quote submitted successfully"))
-  .catch(error => alert("Error submitting form"));
-}
+  // Only include middle liner if 5 ply selected
+  if (ply == "5") {
+    data.middle_liner_gsm = document.getElementById("middle_liner_gsm").value;
+    data.middle_liner_rate = document.getElementById("middle_liner_rate").value;
+  }
+ 
+  try {
+    const response = await fetch("https://quoting.app.n8n.cloud/webhook/quote-rsc", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify(data)
+    });
+
+    if (!response.ok) {
+      throw new Error("Server error");
+    }
+
+    alert("Quote submitted successfully");
+    
+  } catch (error) {
+    alert("Error submitting form. Please try again.");
+  } finally {
+    submitBtn.disabled = false;
+    submitBtn.innerText = "Submit Quote";
+  }
+}  
 </script>
 
 </body>
 </html>
+
 
 
 
