--- a/index.html
+++ b/index.html
@@ -148,7 +148,16 @@
       <option value="5">5 Ply</option>
     </select>
   </div>
-</div>
+</div> 
+
+<label for="flute_type">Flute Type</label>
+<select name="flute_type" id="flute_type" required>
+  <option value="">Select Flute Type</option>
+  <option value="3B">3 Ply – B Flute</option>
+  <option value="3C">3 Ply – C Flute</option>
+  <option value="5BC">5 Ply – BC Flute</option>
+  <option value="5EB">5 Ply – EB Flute</option>
+</select>
 
 <div class="section-title">Specifications</div>
 <div class="grid-2">
@@ -321,6 +330,7 @@ if (honeypot) {
 
 </body>
 </html>
+
 
 
 
