--- a/index.html
+++ b/index.html
@@ -150,26 +150,28 @@
   </div>
 </div> 
 
-<label for="flute_type">Flute Type</label>
-<select name="flute_type" id="flute_type" required>
-  <option value="">Select Flute Type</option>
-  <option value="3B">3 Ply – B Flute</option>
-  <option value="3C">3 Ply – C Flute</option>
-  <option value="5BC">5 Ply – BC Flute</option>
-  <option value="5EB">5 Ply – EB Flute</option>
-</select>
-
 <div class="section-title">Specifications</div>
 <div class="grid-2">
   <div class="field">
     <label>Printing</label>
-    <select id="printing">
+    <select id="printing" name="printing" required>
       <option value="0">Plain</option>
       <option value="1">1 Colour</option>
       <option value="2">2 Colour</option>
     </select>
   </div>
- </div>
+
+  <div class="field">
+    <label>Flute Type</label>
+    <select id="flute_type" name="flute_type" required>
+      <option value="">Select Flute Type</option>
+      <option value="3ply_b">3 Ply - B Flute</option>
+      <option value="3ply_c">3 Ply - C Flute</option>
+      <option value="5ply_bc">5 Ply - BC Flute</option>
+      <option value="5ply_eb">5 Ply - EB Flute</option>
+    </select>
+  </div>
+</div>
 <div class="section-title">Paper Details</div>
 
 <div class="grid-2">
@@ -330,6 +332,7 @@ if (honeypot) {
 
 </body>
 </html>
+
 
 
 
