--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@ if (honeypot) {
     quantity: document.getElementById("quantity").value,
     ply: ply,
     printing: document.getElementById("printing").value,
+    flute_type: document.getElementById("flute_type").value,
     top_liner_gsm: document.getElementById("top_liner_gsm").value,
     top_liner_rate: document.getElementById("top_liner_rate").value,
     medium_gsm: document.getElementById("medium_gsm").value,
@@ -332,6 +333,7 @@ if (honeypot) {
 
 </body>
 </html>
+
 
 
 
